--- a/test/一.数据类型与变量.ipynb
+++ b/test/一.数据类型与变量.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dac15b60",
+   "metadata": {},
+   "source": [
+    "这是一个jupyter格式文件，可以cd到当前目录下运行jupyter notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5a962fbb",
    "metadata": {},
    "source": [
@@ -507,6 +515,60 @@
     "    print('我是洋洋')\n",
     "    time.sleep(1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "735ace47",
+   "metadata": {},
+   "source": [
+    "### 29.要让以个的for循环在执行到第5次后停止(跳出)循环，应该怎么做"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cb6d539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1,10): \n",
+    "    print(f'执行了{i}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcf20cec",
+   "metadata": {},
+   "source": [
+    "### 30.要让以个的for循环不执行第5次print，应该怎么做"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "83f36ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "执行了1\n",
+      "执行了2\n",
+      "执行了3\n",
+      "执行了4\n",
+      "执行了5\n",
+      "执行了6\n",
+      "执行了7\n",
+      "执行了8\n",
+      "执行了9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10): \n",
+    "    print(f'执行了{i}')"
+   ]
   }
  ],
  "metadata": {
@@ -514,7 +576,7 @@
    "hash": "e746eafcc9c3755c618fd70b7289e2c77c6dfaa86036ed9f41128bb78d1ac1c4"
   },
   "kernelspec": {
-   "display_name": "\"Python/Mu (mu_venv-38-20211110-120707)\"",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
